# linearequations

./: .gitignore  README.md
.github/workflows/: chromatic.yml  webapp.yml
api/: .dockerignore  Dockerfile  build_image.sh  fly.toml  pyproject.toml  setup.cfg  sizecheck_image.sh  smoketest_image.py
api/app/: dependencies.py  main.py
api/app/routers/: solver.py
api/app/solver/: coefficient_matrix.py  linear_equation.py  rhs_vector.py  solution_vector.py
api/lineq-solver/: fix-sls-offline.js  package-lock.json  package.json  requirements.txt  serverless.yml
api/lineq-solver/src/handlers/: solver.py
api/tests/app/: test_api.py
webapp/: .env.example  .gitignore  README.md  netlify.toml  package-lock.json  package.json  remix.config.js  tailwind.config.js
webapp/.storybook/: main.js  preview.js
webapp/app/: root.tsx
webapp/app/components/: BottomActionBar.stories.tsx  BottomActionBar.tsx  Button.stories.tsx  Button.tsx  CoefficientColumn.stories.tsx  CoefficientColumn.tsx  CoefficientMatrix.stories.tsx  CoefficientMatrix.tsx  Explanation.stories.tsx  Explanation.tsx  Footer.stories.tsx  Footer.tsx  InProgressIcon.stories.tsx  InProgressIcon.tsx  LeftRightSeparator.stories.tsx  LeftRightSeparator.tsx  MainApp.stories.tsx  MainApp.tsx  MainScreen.stories.tsx  MainScreen.tsx  NumberInput.stories.tsx  NumberInput.tsx  RhsColumn.stories.tsx  RhsColumn.tsx  SeparatorImage.stories.tsx  Title.tsx  (+16 more)
webapp/components/: EquationGrid.tsx  Footer.tsx  Layout.tsx  Matrix.ts  NavBar.tsx  SolutionList.tsx
webapp/pages/: _app.tsx  index.tsx
webapp/public/: sitemap.xml
(+6 files in other folders)
