[project]
name = "linear-equations.com"
version = "1.0.0"
description = "Solve any system of linear equations with ease."
authors = [
    {name = "Andrin Meier", email = "andrin@pricemeier.ch"},
]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn[standard]>=0.17.6",
    "python-dotenv>=0.20.0",
    "numpy>=1.21.1",
]
requires-python = ">=3.7"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.2",
    "flake8>=4.0.1",
    "mypy>=0.950",
    "coverage>=6.3.3",
    "flake8-bandit>=3.0.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
lint = "flake8 ."
docker-lint = "hadolint Dockerfile"
format = "black ."
typecheck = "mypy app tests"
test = "pdm run -v pytest tests"
testci = "coverage run -m pytest -v tests"
testreport = "coverage xml"
dev = "uvicorn app.main:app --reload"